Spacing and size issue

--- a/src/index.css
+++ b/src/index.css
@@ -60,3 +60,7 @@ body {
 .reactCarousel .carousel .control-dots .dot {
   display: none;
 }
+
+.section-2 .text-1 {
+  text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.3);
+}
